tests/negative/typecheck/int.orng
fn main()->Float {1}